--- a/kutyak-infojegyzet-eredeti/kutyak-infojegyzet-eredeti/kutyak-infojegyzet-eredeti/kutyak-infojegyzet-eredeti.csproj
+++ b/kutyak-infojegyzet-eredeti/kutyak-infojegyzet-eredeti/kutyak-infojegyzet-eredeti/kutyak-infojegyzet-eredeti.csproj
@@ -1,11 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>kutyak_infojegyzet_eredeti</RootNamespace>
-    <Nullable>enable</Nullable>
-    <UseWPF>true</UseWPF>
   </PropertyGroup>
 
 </Project>
